Fixed some layout bugs, added time/date.

--- a/app/styles/screen.css
+++ b/app/styles/screen.css
@@ -13,11 +13,25 @@ html, body {
   height: 100px;
   background-color: #59a3a9; }
 
+.time {
+  position: relative;
+  display: inline-block;
+  top: -50px;
+  left: 30%;
+  color: #c7f3f7; }
+
+.date {
+  position: relative;
+  display: inline-block;
+  top: -50px;
+  left: 54%;
+  color: #c7f3f7; }
+
 .screen-container {
   width: 100%;
   background-color: #e6f6f7;
   position: absolute;
-  top: 25%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
 
@@ -32,9 +46,28 @@ html, body {
 
 .expbar_fill {
   position: relative;
-  height: 26px;
+  height: 23px;
   margin: 10px auto 20px auto;
   background-color: #78d2da; }
+
+.container {
+  width: 50%;
+  margin: 0 auto; }
+
+.left {
+  width: 120px;
+  height: 100%;
+  margin: 10px 20px 20px 20px; }
+
+.avatar-card {
+  background-image: url("../assets/images/avatar_card.png");
+  width: 100%;
+  height: 185px; }
+
+.tooltip-center .qtip-content {
+  text-align: center;
+  font-size: 2em;
+  font-family: 'Joystix'; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Joystix', sans-serif; }
